<resources>
    <string name="app_name">مشاوره حقوقی آنلاین</string>
    <string name="home">اصلی</string>
    <string name="what_hoqugi">آیا میدانید های حقوقی</string>
    <string name="aya_hoqugi">آیا میدانید !!</string>
    <string name="family">خانواده</string>
    <string name="how_work">نحوه کار</string>
    <string name="mohajerat">مهاجرت</string>
    <string name="maliati">مالیاتی</string>
    <string name="vorud">ورود</string>
    <string name="sabtnam">ثبت نام</string>
    <string name="nologin"> قبلا ثبت نام نکرده ام !!! </string>
    <string name="login"> قبلا ثبت نام کرده ام !!! </string>
    <string name="moarefi">معرفی به دوستان</string>
    <string name="exit"> خروج از حساب کاربری</string>
    <string name="call_me">تماس با ما</string>
    <string name="question">سوالات شفاهی</string>
    <string name="list_moshaveran">لیست مشاوران</string>
    <string name="signup_moshaver">ثبت نام مشاوران</string>
    <string name="free_moshavere">مشاوره رایگان</string>
    <string name="rezume">مشاهده رزومه وکیل</string>
    <string name="title_qanomAsasi">قانون اساسی جمهوری اسلامی ایران</string>
    <string name="matn_qanonasasi">
قانون اساسی جمهوری اسلامی ایران در سال ۱۳۵۸ توسط مجلس خبرگان قانون اساسی در ۱۷۷ اصل تصویب شده
        و همان سال به همه‌پرسی گذاشته شد و نتیجه آن با رأی مثبت اعلام شد.
        در سال ۱۳۶۸ پس از حکم سید روح‌الله موسوی خمینی به سید علی خامنه‌ای رئیس‌جمهور وقت،
        اصلاحاتی در این قانون صورت پذیرفت و سمت نخست‌وزیری در سمت ریاست جمهور ادغام شد و سمت جدید پدیدآمده را ریاست جمهور نامیدند.
        این اصلاحات سه ماه پس از درگذشت آیت الله خمینی در همه‌پرسی‌ای به تصویب رسید.
    </string>
    <string name="title_tarikhche">تاریخچه</string>
    <string name="matn_tarikhche">
        در زمستان ۱۳۵۷ و قبل از پیروزی انقلاب اسلامی، ایدهٔ تدوین قانون اساسی توسط روح‌الله خمینی و یارانش در پاریس مطرح شد.
        در همان‌جا پیش‌نویس اولیه قانون اساسی تهیه شد.
        بعدها پس از پیروزی انقلاب، این پیش‌نویس توسط افراد و گروه‌های مختلف مورد نقد و بررسی قرار گرفت. در ۱۵ بهمن ۵۷، روح‌الله خمینی از جمله وظایف دولت موقت مهدی بازرگان را تشکیل مجلس مؤسسان منتخب مردم برای نگارش قانون اساسی اعلام کرد.
        پس از شروع کار دولت بازرگان، شورای عالی طرح‌های انقلاب با تصویب هیئت دولت در ۸ فروردین ۵۸ تأسیس و از وظایف این شورا، تهیه طرح قانون اساسی بر مبنای ضوابط اسلامی و اصول آزادی عنوان شد.
        در ۱۲ مرداد ۱۳۵۸ انتخابات مجلس خبرگان قانون اساسی برگزار و اعضای منتخب از ۲۸ مرداد شروع به تدوین قانون اساسی کردند. در ۲۴ آبان ۵۸ کار تدوین به پایان رسید و دو روز بعد (۲۶ آبان ۵۸)در روزنامه کیهان به چاپ رسید.
        همه‌پرسی قانون اساسی در ۱۱ و ۱۲ آذر برگزار شد و با رأی قریب به اتفاق (۹۸/۲درصد) ملت به تصویب نهایی رسید.
    </string>
    <string name="title_qaza_dar_qanon">قضا در قانون اساسی</string>
    <string name="matn_qaza_dar_qanon">
        مساله قضا در رابطه با پاسداری از حقوق مردم در خط حرکت اسلامی، به منظور پیشگیری
        از انحرافات موضعی در درون امت اسلامی امری است حیاتی ، از این رو ایجاد سیستم
        قضایی بر پایه عدل اسلامی و متشکل از قضات عادل و آشنا به ضوابط دقیق دینی
        پیش‌بینی شده است؛ این نظام به دلیل حساسیت بنیادی و دقت در مکتبی بودن آن لازم
        است به دور از هر نوع رابطه و مناسبات ناسالم باشد.
        (و اذا حکمتم بین‌الناس انتحکموا بالعدل).
    </string>
    <string name="title_qove_mojrie">قوه مجریه</string>
    <string name="matn_qove_mojrie">
        قوه مجریه به دلیل اهمیت ویژه‌ای که در رابطه با اجرای احکام و مقررات اسلامی به
        منظور رسیدن به روابط و مناسبات عادلانه حاکم بر جامعه دارد و همچنین ضرورتی که
        این مساله حیاتی در زمینه سازی وصول به هدف نهایی حیات خواهد داشت بایستی راهگشای
        ایجاد جامعه اسلامی باشد. نتیجتاً محصور شدن در هر نوع نظام دست و پا گیر پیچیده که
        وصول به این هدف را کُند و یا خدشه‌دار کند از دیدگاه اسلامی نفی خواهد شد. بدین
        جهت نظام بوروکراسی که زائیده و حاصل حاکمیت‌های طاغوتی است به شدت طرد خواهد شد
        تا نظام اجرایی با کارایی بیشتر و سرعت افزون‌تر در اجرای تعهدات اداری به وجود
        آید.
    </string>
    <string name="title_namayandegan">نمایندگان</string>
    <string name="matn_namayandegan">
        مجلس خبرگان متشکل از نمایندگان مردم، کار تدوین قانون اساسی را بر اساس بررسی
        پیش‌نویس پیشنهادی دولت و کلیه پیشنهادهایی که از گروه‌های مختلف مردم رسیده بود
        در دوازده فصل که مشتمل بر یکصد و هفتاد و پنج اصل می‌باشد در طلیعه پانزدهمین قرن
        هجرت پیغمبر اکرم صلی‌الله علیه و آله و سلم، بنیانگذار مکتب رهایی بخش اسلام با
        اهداف و انگیزه‌های مشروح فوق به پایان رساند، به این امید که این قرن، قرن حکومت
        جهانی مستضعفین و شکست تمامی مستکبرین گردد ‎ ‎
    </string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_login_moshaver">login_moshaver</string>
</resources>
